# InstantDMVNC-Backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  zipcodetolatlong.csv
email_server/: email_map.db  main.py  requirements.txt
src/: cache.rs  main.rs
src/handlers/: listen.rs  mod.rs  offices.rs
src/models/: dmvservice.rs  email.rs  mod.rs  offices.rs  zipcode.rs
src/routes/: health.rs  listen.rs  mod.rs  offices.rs
src/scraping/: constants.rs  mod.rs  scraper.rs
