[package]
name = "instant_dmv_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
country = "0.5.0"
moka = { version = "0.12.10", features = ["future"] }
once_cell = "1.21.3"
postal-code = "0.2.0"
regex = "1.11.1"
scraper = "0.23.1"
serde = "1.0.219"
thirtyfour = "0.35.0"
tokio = "1.44.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
