[package]
name = "instant_dmv_backend"
version = "0.1.5"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
anyhow = "1.0.97"
captcha_oxide = "5.2.0"
chrono = { version = "0.4.40", features = ["serde"] }
country = "0.5.0"
csv = "1.3.1"
dotenv = "0.15.0"
moka = { version = "0.12.10", features = ["future"] }
mongodb = "3.2.3"
once_cell = "1.21.3"
postal-code = "0.2.0"
regex = "1.11.1"
scraper = "0.23.1"
serde = "1.0.219"
serde_json = "1.0.140"
tempfile = "3.19.1"
thirtyfour = "0.35.0"
tokio = "1.44.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = "1.16.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
